# mpsquish

./: Cargo.toml  README.md
benches/: bench.rs
src/: lib.rs  msgpack.rs  pack.rs  unpack.rs
