[package]
name = "mpsquish"
version = "0.1.0"
edition = "2024"

[dependencies]
byteorder = "1.5.0"
json-escape = "0.3.1"
lasso = { version = "0.7.3", features = ["ahasher", "inline-more"] }
nyoom-json = "0.3.0"
rmp = "0.8.15"

[dev-dependencies]
criterion = "0.8.1"
rmp-serde = "1.3.1"
serde-transcode = "1.1.1"
serde_json = "1.0.149"

[[bench]]
name = "bench"
harness = false
